<resources>
    <string name="app_name">P_nju_login</string>
    <string name="app_splash">p.nju.edu.cn</string>

    <string name="text_account">账号：</string>
    <string name="text_password">密码：</string>
    <string name="text_store">记住密码</string>
    <string name="button_login">登陆</string>
    <string name="hint_account">学号</string>
    <string name="hint_password">密码</string>
    <string name="hint_response">登陆状态</string>

    <string name="text_p_nju">p.nju.edu.cn</string>
    <string name="text_logo">NJUer的校园生活</string>

    <string name="text_state">登陆状态：</string>
    <string name="text_user">登陆用户：</string>
    <string name="text_money">账户余额：</string>
    <string name="text_online_time">上网时长：</string>
    <string name="button_logout">下线</string>

</resources>
