<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1" >

    <TableRow>
        <TextView android:textSize="24sp"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_height="wrap_content"
            android:text="@string/text_account"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/account"
            android:layout_height="wrap_content"
            android:hint="@string/hint_account"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_height="wrap_content"
            android:text="@string/text_password"
            android:textSize="18sp"/>

        <EditText android:id="@+id/password"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CheckBox
            android:id="@+id/store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_store"
            android:layout_column="1" />
    </TableRow>

    <TableRow>
        <TextView android:textSize="24sp"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/login"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/button_login"/>

    </TableRow>

</TableLayout>