<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:stretchColumns="1">

    <TableRow>
        <TextView android:textSize="24sp"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_height="wrap_content"
            android:text="@string/text_state"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/state"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="24sp"/>

    </TableRow>

    <TableRow>
        <TextView android:textSize="24sp"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_height="wrap_content"
            android:text="@string/text_user"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/state_user"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="24sp"/>

    </TableRow>

    <TableRow>
        <TextView android:textSize="24sp"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_height="wrap_content"
            android:text="@string/text_money"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/state_money"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="24sp"/>

    </TableRow>

    <TableRow>
        <TextView android:textSize="24sp"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_height="wrap_content"
            android:text="@string/text_online_time"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/state_online_time"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="24sp"/>

    </TableRow>

    <TableRow>
        <TextView android:textSize="24sp"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/state_logout"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/button_logout"/>

    </TableRow>

</TableLayout>